# scan-renamer

./: Cargo.toml  README.md  build-static.sh
src/: main.rs
templates/: index.html
