[package]
name = "scan-renamer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
regex = "1.11.1"
serde = { version="1.0.217", features=["derive"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
